{
    "name": "TouchControls",
    "maps": [
        {
            "name": "TouchScreen",
            "id": "454929e6-0658-4d56-83a5-e6f38a021769",
            "actions": [
                {
                    "name": "TouchPress1",
                    "type": "Button",
                    "id": "415cf387-d1f7-4d9d-98cb-89a403f08aa7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition1",
                    "type": "PassThrough",
                    "id": "de8d673d-7912-408c-85bb-f51f8cfaa353",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress2",
                    "type": "Button",
                    "id": "70eb1f79-e925-4d53-a431-3a3b7aacb0bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition2",
                    "type": "PassThrough",
                    "id": "f451fde0-4ba3-407d-b312-de4e88c80d33",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef6694d6-9b67-4e9d-9dc8-0ca2140232a9",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79f39ba9-0579-4ad4-b3db-cc007fcdf26f",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b21d887-cba3-4ea6-9e8c-f507e38186ac",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6645bd41-505c-4cf9-84cb-cc79a3f3ad13",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}